# veracrypt-VeraCrypt-SDK

./: CMakeLists.txt  README.md  VeraCryptFormatTool.cpp
include/: VeraCryptFormatSDK.h
lib/arm64/: VeraCryptFormat.lib
lib/x64/: VeraCryptFormat.lib
